[gd_scene load_steps=4 format=3 uid="uid://b1hyha80wqqdt"]

[ext_resource type="Script" uid="uid://bd8fdyt7gn318" path="res://scripts/hp_bar.gd" id="1_ybxu1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ceqaf"]
bg_color = Color(0.211694, 0.460266, 0.363621, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybxu1"]
bg_color = Color(0.297581, 0.549214, 0.921625, 1)

[node name="HPBar" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ybxu1")

[node name="HPBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_right = 159.0
offset_bottom = 27.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ceqaf")
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="HPBar"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 160.0
offset_bottom = 27.0
text = "0 / 0"
horizontal_alignment = 1

[node name="ManaBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_top = -47.0
offset_right = 159.0
offset_bottom = -20.0
theme_override_styles/fill = SubResource("StyleBoxFlat_ybxu1")
value = 100.0
show_percentage = false

[node name="ManaLabel" type="Label" parent="ManaBar"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 160.0
offset_bottom = 27.0
text = "0 / 0"
horizontal_alignment = 1

[node name="AutoBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -79.0
offset_right = 160.0
offset_bottom = -52.0
value = 100.0
show_percentage = false

[node name="AutoLabel" type="Label" parent="AutoBar"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 160.0
offset_bottom = 27.0
text = "0 / 0"
horizontal_alignment = 1
